Founder: Bg quotes added font family, details of line height of spacing have been fixed.

--- a/app/scss/_default/_buttons.scss
+++ b/app/scss/_default/_buttons.scss
@@ -10,7 +10,7 @@
 		font-family: $author-font;
 		@include smoothFont();
 
-		@include transitions(0.4s);
+		@include transitions(.4s);
 		
 		&:after, &:before{
 			content: "";
