--- a/app/scss/_views/_founder.scss
+++ b/app/scss/_views/_founder.scss
@@ -228,11 +228,10 @@
 	}
 
 	.philosophy-break{
-		padding-top: 23px;
+		padding-top: 18px;
 
 		.philo-title{
 			padding: 0 30px;
-			margin-bottom: 10px;
 			color: $dark-titles;
 		}
 
@@ -244,7 +243,7 @@
 			.single-phrase-container{
 				position: relative;
 				width: 100%;
-				height: 110px;
+				height: 100px;
 				display: table;
 
 				&#ask-motto{
@@ -267,8 +266,10 @@
 				.phrase-bg{
 					position: absolute;
 					width: 100%;
+					font-family: $brand-font-regular;
 					font-size: 9.2em;
-					line-height: 110px;
+					line-height: 100px;
+					letter-spacing: 1px;
 					text-transform: uppercase;
 					color: #fff;
 					text-shadow: 0 0 1.2px #00145a;
@@ -281,7 +282,6 @@
 					display: table-cell;
 					vertical-align: middle;
 					padding-left: 99px;
-					padding-bottom: 0.5em;
 					font-family: $brand-font-regular;
 					font-size: 2.2em;
 					letter-spacing: -0.05em;
